--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "tailwindcss": "^2.2.4"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.11",
+    "typescript": "^4.3.4"
   }
 }
