--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "date-fns": "^2.22.1",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.4.0",
     "gray-matter": "^4.0.3",
     "next": "^10.0.0",
     "postcss": "^8.3.5",
