--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "tailwindcss-debug-screens": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
