--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.5",
     "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
