--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "isemail": "^3.2.0",
     "next": "^10.0.0",
     "postcss": "^8.3.5",
     "postcss-flexbugs-fixes": "^5.0.2",
