POC for structured text

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
+    "react-datocms": "^1.6.3",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
