--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.5",
+    "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
